--- a/page.html
+++ b/page.html
@@ -61,6 +61,8 @@
 	
 	$("h1").text("페이드아웃과 함께 사라질 거예요.").fadeOut(3000).fadeIn(2000);
 	$("h1").slideUp(1000).slideDown(1000);
+	
+	$("h1").fadeTo(2000, 0.5);
   
   </script>
   
